--- a/RandomForestClassifier/Credit Risk Evaluator - RFC.ipynb
+++ b/RandomForestClassifier/Credit Risk Evaluator - RFC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,24 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'make_classification' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Janssen VR 2\\Documents\\GitHub\\supervised-machine-learning-challenge\\RandomForestClassifier\\Credit Risk Evaluator - RFC.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Janssen%20VR%202/Documents/GitHub/supervised-machine-learning-challenge/RandomForestClassifier/Credit%20Risk%20Evaluator%20-%20RFC.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Split the data into X_train, X_test, y_train, y_test\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Janssen%20VR%202/Documents/GitHub/supervised-machine-learning-challenge/RandomForestClassifier/Credit%20Risk%20Evaluator%20-%20RFC.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m X, y \u001b[39m=\u001b[39m make_classification(random_state\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, n_features\u001b[39m=\u001b[39m\u001b[39m8\u001b[39m, n_informative\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, n_redundant\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Janssen%20VR%202/Documents/GitHub/supervised-machine-learning-challenge/RandomForestClassifier/Credit%20Risk%20Evaluator%20-%20RFC.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(X, y, random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Janssen%20VR%202/Documents/GitHub/supervised-machine-learning-challenge/RandomForestClassifier/Credit%20Risk%20Evaluator%20-%20RFC.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m scaler \u001b[39m=\u001b[39m StandardScaler()\u001b[39m.\u001b[39mfit(X_train)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'make_classification' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Split the data into X_train, X_test, y_train, y_test\n",
-    "X, y = make_classification(random_state=1, n_features=8, n_informative=5, n_redundant=0)\n",
+    "X, y = make_classification(random_state=42, n_features=8, n_informative=5, n_redundant=0)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
@@ -199,13 +187,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 1.0\n",
+      "Testing Score: 0.92\n"
+     ]
+    }
+   ],
    "source": [
     "clf = RandomForestClassifier(random_state=1, n_estimators=500).fit(X_train_scaled, y_train)\n",
     "print(f'Training Score: {clf.score(X_train_scaled, y_train)}')\n",
     "print(f'Testing Score: {clf.score(X_test_scaled, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The training score for the Random Forest Classifier was 100%; the one decision tree very capably memorized the data, and the accuracy of the model was at 92%\n",
+    "\n",
+    "### The training score for the Linear Regression was 60% and the accuracy was 99.6%.\n",
+    "\n",
+    "#### Going by the testing score, the linear regression model worked better. \n",
+    "\n",
+    "\n"
    ]
   }
  ],
